<resources>
    <string name="app_name">Sohoj_Path</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="click_to_sign_up">Click To Signup</string>
    <string name="click_to_login">Click To Login</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>