<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="370dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>




    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->
    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:id="@+id/password"-->
    <!--            android:hint="@string/password"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content" />-->
    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="370dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/signupnow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/click_to_sign_up"
        android:textColor="#2196F3"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>