<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".signup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="370dp"
        android:layout_height="61dp"
        android:gravity="center"
        app:endIconMode="clear_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/password"-->
<!--            android:hint="@string/password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="370dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember me"
        android:textColor="#2196F3"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />


    <Button
        android:id="@+id/btn_signup"
        android:text="@string/signup"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/loginnow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#2196F3"
        android:layout_marginTop="20dp"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>